@@ -1,5 +1,8 @@
 2009-12-28  Torbjorn Granlund  <tege@gmplib.org>
 
+	* tune/common.c, tune/speed.c, tune/speed.h: Support measuring
+	mpn_lshiftc.
+
 	* tests/devel/try.c: Test mpn_lshiftc.
 	* tests/refmpn.c (refmpn_com): New function.
 	(refmpn_lshiftc): Likewise.
